<resources>
    <string name="app_name">Actividad2U2</string>
    <string name="text_inicial">¡Bienvenido!</string>
    <string name="text_inicial2">Vamos a ponernos al día.</string>
    <string name="text_infoUs">¿Cómo te llamas?</string>
    <string name="text_parrafo1">¿Qué categoría de noticias te interesa más?</string>
    <string name="cb1">Muéstrame todas</string>
    <string name="cb2">Deportes</string>
    <string name="cb3">Tecnología</string>
    <string name="pulsarboton">Continuar</string>
    <string name="hint">¿Cómo te llamas?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mensajeF2"> %1$s,puede que encuentres información sensible. Necesitamos que nos confirmes que eres mayor de edad.</string>
    <string name="boton2">Llévame al Feed</string>
    <string name="mayorEdad">¿Eres mayor de edad?</string>
    <string name="notrecview1">Muere la famosa Medallista</string>
    <string name="notrecview2">Aitana Recibe el disco de Oro por sus temas</string>
    <string name="tituloGenerales">Noticias Generales</string>
    <string name="tituloDeportes">Noticias Deportes</string>
    <string name="subtitulo1Deportes">España se jugará la plaza olímpica con Líbano, Angola, Finlandia, Polonia y Bahamas</string>
    <string name="subtitulo2Deportes">Alexia causa baja en la Selección y vuelve a Barcelona</string>
    <string name="subtitulo3Deportes">Oficial: MotoGP recupera las concesiones para ayudar a Honda y Yamaha</string>
    <string name="subtitulo4Deportes">Bagnaia reconoce que "quería conseguir el titulo ganando la carrera</string>
    <string name="tituloTecnología">Noticias Innovación</string>
    <string name="medallistaNot1">Muere a los 21 años Emilia Brangefält, medallista mundial sueca de Trail Running</string>
    <string name="medallistatexto1">Emilia Brangefält, medallista mundial
        sueca de trail running, ha muerto a los 21 años sin que hayan
        trascendido los motivos de su fallecimiento.
        .</string>
    <string name="medallistatexto2">
         La atleta pasaba por una
        fuerte depresión tras tener que dejar la competición ya que tenía una frecuencia
        cardiaca demasiado elevada, llegando a estar entre 120-150 pulsaciones por minuto en reposo.

    </string>
    <string name="medallistatexto3">


        Brangefält había logrado la medalla de bronce en el Short Trail del Mundial de 2022 en Chiang Mai,
        Tailandia, y fue quinta en el Mundial en Innsbruck este 2023. Pero el pasado 4 de noviembre,
        la corredora expreso su bajo estado de ánimo tras no poder competir más por su problema cardiaco.
    </string>
    <string name="fecha1"> viernes, 26 de noviembre</string>
    <string name="title_activity_home_acivity">HomeAcivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_home">HomeActivity</string>
</resources>