<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/mensajeAviso"
        android:layout_width="323dp"
        android:layout_height="377dp"
        android:gravity="center"
        android:text="@string/mensajeF2"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454">

    </TextView>

    <ImageView
        android:id="@+id/image2"
        android:layout_width="239dp"
        android:layout_height="212dp"
        android:gravity="center"
        android:src="@drawable/imageinfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but2"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#676767"
        app:backgroundTint="#C8C8C8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/mayorEdad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806" />


</androidx.constraintlayout.widget.ConstraintLayout>